--- a/introduction.tex
+++ b/introduction.tex
@@ -83,11 +83,11 @@ Nonetheless, the existing studies allow for a survey of available methodologies 
 \end{table}
 
 The first step---mutagenesis---has been performed in different ways by different groups. The simplest method is error-prone PCR amplification~\cite{firstErrorPronePCR,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of this set, however at the expense of potentially valuable biochemical insights. Another method often employed is Kunkel mutagenesis~\cite{kunkel_rapid_1985}. Originally developed as a method for simple site-directed mutagenesis, it can be scaled up to address a combination of multiple sites at once. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uradine and lacks the ability to excise uracil bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. %More
-A more recent development is the availabiltiy of custom oligonucleotide arrays covering all possible (or desired) options of codon changes~\todo{REF}. These can then be used in linear amplification reactions with the gene template. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable at genome-scale. Similarly, mutagenesis libraries are becoming commercially available via gene synthesis~\todo{REF}. While this method is certainly the most convenient, it is by far the most expensive option. A middle ground can be found in methods that~\todo{Shendure Mutagenesis}
+A more recent development is the use of custom oligonucleotide arrays covering all possible (or desired) options of codon changes~\cite{kitzman_massively_2015}. These can then be used in linear amplification reactions with the gene template. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable at genome-scale. Similarly, mutagenesis libraries are becoming commercially available via gene synthesis~\cite{kosuri_scalable_2010}. While this method is certainly the most convenient, it is by far the most expensive option. A middle ground can be found in methods that employ amplification with oligonucleotides carrying degeneracy codons~\cite{pal_methods_2005}. Particularly popular is the use of NNK and NNS degeneracies, which have long been used in biochemistry~\cite{scott_searching_1990,barbas_semisynthetic_1992}. Here, S denotes Guanine or Cytosine and K denotes Guanine or Thymine in the third position of the codon. While either of these codes only allow 32 of all 64 possible codons to be formed, they do cover all 20 possible amino acids, while avoiding two of the three possible stop codons (opal and ochre).
 
 Library construction is the second step in any DMS experiment. The choice of method in this step is dependent on the type of selection and sequencing used in the later steps. Some methods require mutants to be tagged with molecular barcodes, i.e. short unique DNA sequences inserted at a known location that allow identification of a molecule with just a single sequencing read. While the use of barcodes greatly simplifies the readout of the selection result it does require that the contents of the library are catalogued at the time of construction.
 
-Step three of a DMS procedure is the selection of mutants that pass a given assay. In most cases, assays are designed to test for protein protein interactions, for example via Y2H or phage display. In other cases it may be overall protein function, as measured by complementation or in cases of viral proteins, the ability of the virus to replicate.
+Step three of a DMS procedure is the selection of mutants that pass a given assay. In most cases, assays are designed to test for protein protein interactions, for example via Y2H or phage display~\todo{REF}. In other cases it may be overall protein function, as measured by complementation or in cases of viral proteins, the ability of the virus to replicate.
 
 The fourth step in the procedure is sequencing. 
 
