--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,23 @@
 
+@article{kosuri_scalable_2010,
+	title = {Scalable gene synthesis by selective amplification of {DNA} pools from high-fidelity microchips},
+	volume = {28},
+	copyright = {© 2010 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1087-0156},
+	url = {http://www.nature.com/nbt/journal/v28/n12/abs/nbt.1716.html},
+	doi = {10.1038/nbt.1716},
+	abstract = {Development of cheap, high-throughput and reliable gene synthesis methods will broadly stimulate progress in biology and biotechnology. Currently, the reliance on column-synthesized oligonucleotides as a source of DNA limits further cost reductions in gene synthesis. Oligonucleotides from DNA microchips can reduce costs by at least an order of magnitude, yet efforts to scale their use have been largely unsuccessful owing to the high error rates and complexity of the oligonucleotide mixtures. Here we use high-fidelity DNA microchips, selective oligonucleotide pool amplification, optimized gene assembly protocols and enzymatic error correction to develop a method for highly parallel gene synthesis. We tested our approach by assembling 47 genes, including 42 challenging therapeutic antibody sequences, encoding a total of {\textasciitilde}35 kilobase pairs of DNA. These assemblies were performed from a complex background containing 13,000 oligonucleotides encoding {\textasciitilde}2.5 megabases of DNA, which is at least 50 times larger than in previously published attempts.},
+	language = {en},
+	number = {12},
+	urldate = {2013-06-17},
+	journal = {Nature Biotechnology},
+	author = {Kosuri, Sriram and Eroshenko, Nikolai and LeProust, Emily M. and Super, Michael and Way, Jeffrey and Li, Jin Billy and Church, George M.},
+	month = dec,
+	year = {2010},
+	pages = {1295--1299},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/64KSHBJW/Kosuri et al. - 2010 - Scalable gene synthesis by selective amplification.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/F69NJK29/nbt.1716.html:text/html}
+}
+
 @article{starita_massively_2015,
 	title = {Massively {Parallel} {Functional} {Analysis} of {BRCA}1 {RING} {Domain} {Variants}},
 	issn = {0016-6731, 1943-2631},
@@ -1293,7 +1312,7 @@ PaperClip},
 	year = {2015},
 	keywords = {DNA sequencing, functional genomics, Mutation, PCR-based techniques},
 	pages = {203--206},
-	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/ZJMTD4FF/nmeth.3223.html:text/html}
+	file = {Kitzman et al. - 2015 - Massively parallel single-amino-acid mutagenesis.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/NTCHPUET/Kitzman et al. - 2015 - Massively parallel single-amino-acid mutagenesis.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/ZJMTD4FF/nmeth.3223.html:text/html}
 }
 
 @article{mishra_systematic_2016,
@@ -1330,7 +1349,7 @@ To probe the mechanism of the Hsp90 chaperone that is required for the maturatio
 	year = {2016},
 	keywords = {deep mutational scanning, Evolution, hemagglutinin, influenza, mutational tolerance},
 	pages = {155},
-	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WCSW3HQT/Doud and Bloom - 2016 - Accurate Measurement of the Effects of All Amino-A.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/MSTRA2J2/htm.html:text/html}
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WCSW3HQT/Doud and Bloom - 2016 - Accurate Measurement of the Effects of All Amino-A.pdf:application/pdf;sidhu_ubiq_dms_suppl.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/UKFC7KHU/sidhu_ubiq_dms_suppl.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/MSTRA2J2/htm.html:text/html}
 }
 
 @article{mavor_determination_2016,
@@ -1701,4 +1720,68 @@ A major bottleneck in protein structure prediction is the selection of correct m
 	year = {2014},
 	pages = {1581--1592},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/SEGPJ76G/Firnberg et al. - 2014 - A Comprehensive, High-Resolution Map of a Gene’s F.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/KQGI9U7M/A-Comprehensive-High-Resolution-Map-of-a-Gene-s.html:text/html}
+}
+
+@article{ernst_strategy_2013,
+	title = {A {Strategy} for {Modulation} of {Enzymes} in the {Ubiquitin} {System}},
+	volume = {339},
+	copyright = {Copyright © 2013, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {http://science.sciencemag.org/content/339/6119/590},
+	doi = {10.1126/science.1230161},
+	abstract = {The ubiquitin system regulates virtually all aspects of cellular function. We report a method to target the myriad enzymes that govern ubiquitination of protein substrates. We used massively diverse combinatorial libraries of ubiquitin variants to develop inhibitors of four deubiquitinases (DUBs) and analyzed the DUB-inhibitor complexes with crystallography. We extended the selection strategy to the ubiquitin conjugating (E2) and ubiquitin ligase (E3) enzymes and found that ubiquitin variants can also enhance enzyme activity. Last, we showed that ubiquitin variants can bind selectively to ubiquitin-binding domains. Ubiquitin variants exhibit selective function in cells and thus enable orthogonal modulation of specific enzymatic steps in the ubiquitin system.
+A technique for developing specific and potent enzyme inhibitors is validated on enzymes of the ubiquitin‑proteasome system.
+A technique for developing specific and potent enzyme inhibitors is validated on enzymes of the ubiquitin‑proteasome system.},
+	language = {en},
+	number = {6119},
+	urldate = {2017-02-07},
+	journal = {Science},
+	author = {Ernst, Andreas and Avvakumov, George and Tong, Jiefei and Fan, Yihui and Zhao, Yanling and Alberts, Philipp and Persaud, Avinash and Walker, John R. and Neculai, Ana-Mirela and Neculai, Dante and Vorobyov, Andrew and Garg, Pankaj and Beatty, Linda and Chan, Pak-Kei and Juang, Yu-Chi and Landry, Marie-Claude and Yeh, Christina and Zeqiraj, Elton and Karamboulas, Konstantina and Allali-Hassani, Abdellah and Vedadi, Masoud and Tyers, Mike and Moffat, Jason and Sicheri, Frank and Pelletier, Laurence and Durocher, Daniel and Raught, Brian and Rotin, Daniela and Yang, Jianhua and Moran, Michael F. and Dhe-Paganon, Sirano and Sidhu, Sachdev S.},
+	month = feb,
+	year = {2013},
+	pmid = {23287719},
+	pages = {590--595},
+	file = {Ernst et al. - 2013 - A Strategy for Modulation of Enzymes in the Ubiqui.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/RZMQJXGH/Ernst et al. - 2013 - A Strategy for Modulation of Enzymes in the Ubiqui.pdf:application/pdf;sidhu_ubiq_dms_suppl.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/AVTT4RS8/sidhu_ubiq_dms_suppl.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/BSJRCCFA/590.html:text/html}
+}
+
+@article{barbas_semisynthetic_1992,
+	title = {Semisynthetic combinatorial antibody libraries: a chemical solution to the diversity problem.},
+	volume = {89},
+	issn = {0027-8424, 1091-6490},
+	shorttitle = {Semisynthetic combinatorial antibody libraries},
+	url = {http://www.pnas.org/content/89/10/4457},
+	doi = {10.1073/pnas.89.10.4457},
+	abstract = {The properties of naiveté and large diversity are considered to be essential starting features for combinatorial antibody libraries that eschew immunization by evolution in vitro. We have prepared large libraries with such properties by using random oligonucleotide synthesis, which has the potential to create approximately 10(20) complementarity-determining regions for antibody heavy chains. When combined with light chains and expressed on phage surfaces, high-affinity antibodies could be selected from 5.0 x 10(7) Escherichia coli transformants. Remarkably, antibodies selected only for binding displayed both general structural features known to be important in nature's own antibodies and specific consensus sequences thought to be critical for interaction with the hapten against which the library was selected. Semisynthetic and ultimately totally synthetic combinatorial libraries when coupled with mutation and selection procedures should replace immunization for generation of reagent, therapeutic, and catalytic antibodies.},
+	language = {en},
+	number = {10},
+	urldate = {2017-02-07},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Barbas, C. F. and Bain, J. D. and Hoekstra, D. M. and Lerner, R. A.},
+	month = may,
+	year = {1992},
+	pmid = {1584777},
+	pages = {4457--4461},
+	annote = {NNK NNS},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/9CACMH3X/Barbas et al. - 1992 - Semisynthetic combinatorial antibody libraries a .pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/4G2KTXZB/4457.html:text/html}
+}
+
+@article{scott_searching_1990,
+	title = {Searching for peptide ligands with an epitope library},
+	volume = {249},
+	copyright = {© 1990},
+	issn = {0036-8075, 1095-9203},
+	url = {http://science.sciencemag.org/content/249/4967/386},
+	doi = {10.1126/science.1696028},
+	abstract = {Tens of millions of short peptides can be easily surveyed for tight binding to an antibody, receptor or other binding protein using an "epitope library." The library is a vast mixture of filamentous phage clones, each displaying one peptide sequence on the virion surface. The survey is accomplished by using the binding protein to affinity-purify phage that display tight-binding peptides and propagating the purified phage in Escherichia coli. The amino acid sequences of the peptides displayed on the phage are then determined by sequencing the corresponding coding region in the viral DNA's. Potential applications of the epitope library include investigation of the specificity of antibodies and discovery of mimetic drug candidates.},
+	language = {en},
+	number = {4967},
+	urldate = {2017-02-07},
+	journal = {Science},
+	author = {Scott, J. K. and Smith, G. P.},
+	month = jul,
+	year = {1990},
+	pmid = {1696028},
+	pages = {386--390},
+	annote = {first NNK usage?},
+	file = {Scott and Smith - 1990 - Searching for peptide ligands with an epitope libr.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WNM3NTV9/Scott and Smith - 1990 - Searching for peptide ligands with an epitope libr.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/4QGUABNE/386.html:text/html}
 }
