--- a/thesis.bib
+++ b/thesis.bib
@@ -92,6 +92,19 @@
 	file = {Cunningham and Wells - 1989 - High-resolution epitope mapping of hGH-receptor in.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/RMX7ZNZ3/Cunningham and Wells - 1989 - High-resolution epitope mapping of hGH-receptor in.pdf:application/pdf}
 }
 
+@article{levenshtein_binary_1966,
+	title = {Binary {Codes} {Capable} of {Correcting} {Deletions}, {Insertions} and {Reversals}},
+	volume = {10},
+	url = {http://adsabs.harvard.edu/abs/1966SPhD...10..707L},
+	abstract = {Not Available},
+	urldate = {2013-02-11},
+	journal = {Soviet Physics Doklady},
+	author = {Levenshtein, V. I.},
+	month = feb,
+	year = {1966},
+	pages = {707}
+}
+
 @article{fowler_high-resolution_2010,
 	title = {High-resolution mapping of protein sequence-function relationships},
 	volume = {7},
@@ -296,7 +309,7 @@ View full text},
 	keywords = {Candida albicans dominant selection marker, Codon optimization, Functional proteomics, Genetic engineering, Multiple site-directed mutagenesis},
 	pages = {285--291},
 	annote = {popcode template},
-	file = {ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/9WZIAWV7/S0003269703006845.html:text/html}
+	file = {ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/9WZIAWV7/S0003269703006845.html:text/html;Seyfang and Huaqian Jin - 2004 - Multiple site-directed mutagenesis of more than 10.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/M4BWMREH/Seyfang and Huaqian Jin - 2004 - Multiple site-directed mutagenesis of more than 10.pdf:application/pdf}
 }
 
 @article{jiang_two-hybrid_1996,
@@ -1784,4 +1797,24 @@ A technique for developing specific and potent enzyme inhibitors is validated on
 	pages = {386--390},
 	annote = {first NNK usage?},
 	file = {Scott and Smith - 1990 - Searching for peptide ligands with an epitope libr.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/WNM3NTV9/Scott and Smith - 1990 - Searching for peptide ligands with an epitope libr.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/4QGUABNE/386.html:text/html}
+}
+
+@article{majithia_prospective_2016,
+	title = {Prospective functional classification of all possible missense variants in {PPARG}},
+	volume = {48},
+	copyright = {© 2016 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1061-4036},
+	url = {http://www.nature.com/ng/journal/v48/n12/abs/ng.3700.html#affil-auth},
+	doi = {10.1038/ng.3700},
+	abstract = {Clinical exome sequencing routinely identifies missense variants in disease-related genes, but functional characterization is rarely undertaken, leading to diagnostic uncertainty. For example, mutations in PPARG cause Mendelian lipodystrophy and increase risk of type 2 diabetes (T2D). Although approximately 1 in 500 people harbor missense variants in PPARG, most are of unknown consequence. To prospectively characterize PPARγ variants, we used highly parallel oligonucleotide synthesis to construct a library encoding all 9,595 possible single–amino acid substitutions. We developed a pooled functional assay in human macrophages, experimentally evaluated all protein variants, and used the experimental data to train a variant classifier by supervised machine learning. When applied to 55 new missense variants identified in population-based and clinical sequencing, the classifier annotated 6 variants as pathogenic; these were subsequently validated by single-variant assays. Saturation mutagenesis and prospective experimental characterization can support immediate diagnostic interpretation of newly discovered missense variants in disease-related genes.},
+	language = {en},
+	number = {12},
+	urldate = {2017-02-07},
+	journal = {Nature Genetics},
+	author = {Majithia, Amit R. and Tsuda, Ben and Agostini, Maura and Gnanapradeepan, Keerthana and Rice, Robert and Peloso, Gina and Patel, Kashyap A. and Zhang, Xiaolan and Broekema, Marjoleine F. and Patterson, Nick and Duby, Marc and Sharpe, Ted and Kalkhoven, Eric and Rosen, Evan D. and Barroso, Inês and Ellard, Sian and {UK Monogenic Diabetes Consortium} and Kathiresan, Sekar and {Myocardial Infarction Genetics Consortium} and O'Rahilly, Stephen and {UK Congenital Lipodystrophy Consortium} and Chatterjee, Krishna and Florez, Jose C. and Mikkelsen, Tarjei and Savage, David B. and Altshuler, David},
+	month = dec,
+	year = {2016},
+	keywords = {Gene Targeting, Genetic testing, Type 2 diabetes},
+	pages = {1570--1575},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/XZDB6VTQ/ng.3700.html:text/html}
 }
