--- a/introduction.tex
+++ b/introduction.tex
@@ -82,6 +82,12 @@ Nonetheless, the existing studies allow for a survey of available methodologies 
 	\end{tabular}
 \end{table}
 
+%error prone polymerase
+%oxidized nucleotides
+%kunkel + pfunkel
+%PCR with array oligos or degenerate oligos
+%gene synthesis
+
 The first step---mutagenesis---has been performed in different ways by different groups. The simplest method is error-prone PCR amplification~\cite{firstErrorPronePCR,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of this set, however at the expense of potentially valuable biochemical insights. Another method often employed is Kunkel mutagenesis~\cite{kunkel_rapid_1985}. Originally developed as a method for simple site-directed mutagenesis, it can be scaled up to address a combination of multiple sites at once. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uradine and lacks the ability to excise uracil bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. 
 
 %discuss amplification with mutagenic oligos \cite{seyfang_multiple_2004}
